<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mio Giapicco Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="channel_name">Device state notifications</string>
    <string name="channel_description">Shown when device malfunction detected</string>
    <string name="malfunction_detected">At least one of your devices is not working properly</string>
    <string name="last_seen" translatable="false">Last seen</string>
    <string name="example_name" translatable="false">Name</string>
    <string name="example_lastseen" translatable="false">1 min ago</string>
    <string name="example_time" translatable="false">12:00</string>
    <string name="example_percent" translatable="false">50%</string>
    <string name="example_title" translatable="false">Title</string>
    <string name="example_message" translatable="false">Example message</string>
    <string name="example_temperature" translatable="false">23&#xb0;C</string>
    <string name="mg_device_name_light" translatable="false">MioGiapicco Light</string>
    <string name="mg_device_name_air" translatable="false">MioGiapicco Air</string>
    <string name="mg_device_name_soil" translatable="false">MioGiapicco Soil</string>
    <string name="button_signin">Sign in</string>
    <string name="button_create_account">Create new account!</string>
    <string name="button_signup">Sign up</string>
    <string name="button_start">Start</string>
    <string name="button_connect">Connect</string>
    <string name="button_retry">Retry</string>
    <string name="button_config_device">Write config</string>
    <string name="button_finish">Finish</string>
    <string name="button_set">Set</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_unbind">Unbind</string>
    <string name="button_start_upgrade">Start upgrade</string>
    <string name="button_add_new_device">Add new MioGiapicco device</string>
    <string name="button_add_new_room">Add new room</string>
    <string name="button_add_new_sector">Add new sector</string>
    <string name="button_accept">Accept</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_create">Create</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="button_activate">Activate account</string>
    <string name="button_send_new_code">Send new code</string>
    <string name="button_close">Close</string>
    <string name="button_settings">Settings</string>
    <string name="button_room_settings">Room`s settings</string>
    <string name="button_rename">Rename</string>
    <string name="button_remove">Remove</string>
    <string name="button_next">Next</string>
    <string name="button_previous">Previous</string>
    <string name="button_try_again">Try again!</string>
    <string name="button_save_settings">Save</string>
    <string name="button_open_chart">Plot</string>
    <string name="cd_open_air_chart">Open air chart</string>
    <string name="chip_period_day">day</string>
    <string name="chip_period_3days">3 days</string>
    <string name="chip_period_month">month</string>
    <string name="chip_period_3months">3 months</string>
    <string name="chip_period_year">year</string>
    <string name="chip_period_all_data">all data</string>
    <string name="label_signin">Sign in</string>
    <string name="label_addnewdevice_step1">1) Power on your device and enable bluetooth then tap Start</string>
    <string name="label_addnewdevice_step2">2) Looking for your device…</string>
    <string name="label_addnewdevice_found">Found</string>
    <string name="label_addnewdevice_notfound">Cannot see any device &#128542;</string>
    <string name="label_addnewdevice_connected">Connected with</string>
    <string name="label_addnewdevice_step3">3) Config access point settings and label your device</string>
    <string name="label_add_new_room">New room…</string>
    <string name="label_add_new_sector">New sector…</string>
    <string name="label_add_new_plant">New plant…</string>
    <string name="label_timezone">Select your time zone</string>
    <string name="label_placement">Where will you set up the new device?:</string>
    <string name="label_config_wifi">Which network should the device connect to?</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_temperature">Temperature</string>
    <string name="label_battery_level">Battery level:</string>
    <string name="label_humidity_target">Humidity target:</string>
    <string name="label_allow_update">Allow auto update</string>
    <string name="label_lights_list">🔆 Lights</string>
    <string name="label_air_params">☁️ Air</string>
    <string name="label_plants_list">🪴 Plants</string>
    <string name="label_server_role">Server role</string>
    <string name="hint_login">Login</string>
    <string name="hint_ssid">Wifi name</string>
    <string name="hint_psk">Password</string>
    <string name="hint_plants_name">Plants name</string>
    <string name="hint_rooms_name">Rooms name</string>
    <string name="hint_room">Room</string>
    <string name="hint_sector">Sector</string>
    <string name="hint_plant">Plant</string>
    <string name="hint_timezone">Timezone</string>
    <string name="hint_new_room_name">New room\'s name</string>
    <string name="hint_new_sector_name">New sector\'s name</string>
    <string name="hint_new_plant_name">New plant\'s name</string>
    <string name="hint_light_device_name">Device name</string>
    <string name="hint_activation_pin">Activation pin</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Repeat password</string>
    <string name="hint_none" translatable="false">None</string>
    <string name="hint_tap_to_learn_more">Tap to learn more</string>
    <string name="helper_password_rules">Minimum 8 characters long, at least one special character, one uppercase letter and one digit</string>
    <string name="message_change_dli">Set new light intensity</string>
    <string name="message_change_humidity_target">Set new air humidity target</string>
    <string name="message_change_plant_name">Set new plants name</string>
    <string name="message_change_devices_name">Set new devices name</string>
    <string name="message_set_rooms_name">Set new room\'s name</string>
    <string name="message_set_sector_name">Set new sector\'s name</string>
    <string name="message_update_in_progress">Updating</string>
    <string name="message_signup_details">Fill in the fields below and we\'ll get started!</string>
    <string name="message_activation_pin_sent">I sent an email to the provided address with the activation code (I won\'t send anything else)</string>
    <string name="message_activation_pin_input">Enter this code in the field below</string>
    <string name="message_activation_code_regenerated">I have sent a new activation code</string>
    <string name="message_remove_device">Device will be unbind from your account immediately but you may need to reset your device configuration manually pressing reset button for at least 5 seconds.\n\nDo you really want to unbind device from your account?</string>
    <string name="message_remove_room">All sectors and devices assigned to this room will be deleted!\n\nDo you really want to remove room from your account?</string>
    <string name="message_device_configured">Device ready! 🎊</string>
    <string name="message_device_connect_failed">Failed connecting with your device 😥</string>
    <string name="message_device_unexpected_disconnect">Oh! Device disconnected unexpectedly! 🛸</string>
    <string name="message_device_found">Found! 🐕</string>
    <string name="message_ui_error">Strange UI Error 👾</string>
    <string name="message_on_room_remove_not_empty">You must remove all sectors before you can delete the room.</string>
    <string name="info_login_pass_empty">Fill up login and password fields</string>
    <string name="info_signin_failed">Wrong login or password</string>
    <string name="info_seconds_ago">Seconds ago</string>
    <string name="info_min_ago">%d min ago</string>
    <string name="info_hours_ago">%d hours ago</string>
    <string name="info_days_ago">%d days ago</string>
    <string name="info_no_devices_bind">No devices connected</string>
    <string name="info_seen_long_ago">Seen looong time ago</string>
    <string name="info_no_soil_device_assigned">No soil device</string>
    <string name="info_light_time" translatable="false">%s</string>
    <string name="info_software_version">Software: %s</string>
    <string name="info_hardware_version">Hardware: %s</string>
    <string name="title_create_plant_dialog">New plant</string>
    <string name="title_create_room_dialog">New room</string>
    <string name="title_create_sector_dialog">New sector</string>
    <string name="title_set_dli">Maximum intensity</string>
    <string name="title_set_ht">Humidity target</string>
    <string name="title_adding_new_device">New device</string>
    <string name="title_light_device_settings">Settings</string>
    <string name="title_create_account">Create account</string>
    <string name="title_air_data_history">Air data history</string>
    <string name="title_remove_device">Remove %s device</string>
    <string name="title_rename_device">Rename %s device</string>
    <string name="title_remove_room">Remove %s room</string>
    <string name="title_rename_room">Rename %s room</string>
    <string name="title_rename_sector">Rename %s sector</string>
    <string name="title_remove_sector">Remove %s sector</string>
    <string name="title_today">Today</string>
    <string name="title_period_all_data">All data</string>
    <string name="title_air_data">Air data</string>
    <string name="title_room_settings">Room`s settings</string>
    <string name="value_temperature" translatable="false">%.1f&#xb0;C</string>
    <string name="value_humidity" translatable="false">%.1f%%</string>
    <string name="value_humidity_integer" translatable="false">%d%%</string>
    <string name="value_temp_hum" translatable="false">%.1f&#xb0;C &#183; %d%%</string>
    <string name="value_no_humidity" translatable="false">-%%</string>
    <string name="value_no_temperature" translatable="false">-&#xb0;C</string>
    <string name="value_co2_ppm" translatable="false">%dppm</string>
    <string name="value_dli" translatable="false">%d%%</string>
    <string name="value_unknown">unknown</string>
    <string name="value_battery_voltage" translatable="false">%.2fV</string>
    <string name="value_no_battery" translatable="false">-</string>
    <string name="value_last_seen_now">seconds ago</string>
    <plurals name="value_last_seen_min">
        <item quantity="one">an minute ago</item>
        <item quantity="few">%d minutes ago</item>
        <item quantity="many">%d minutes ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="value_last_seen_h">
        <item quantity="one">an hour ago</item>
        <item quantity="few">%d hours ago</item>
        <item quantity="many">%d hours ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="error_field_empty">This field cannot be empty</string>
    <string name="error_email_invalid">Invalid email format</string>
    <string name="error_password_short">Min 8 characters</string>
    <string name="error_password_weak">Must contain at least one special character, one uppercase letter and one digit</string>
    <string name="error_password_mismatch">Password and confirmation password do not match</string>
    <string name="message_no_activation_code">Did you not receive an email with the activation code?</string>
</resources>