<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ld_settingsbox_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"

    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hardware_version_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:minHeight="36dp">
        <TextView
            android:id="@+id/hardware_version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/info_hardware_version"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/software_version_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hardware_version_info_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:minHeight="36dp">
        <TextView
            android:id="@+id/software_version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/info_software_version"/>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/software_update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_update"
            app:icon="@drawable/icon_upgrade"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        style="@style/Theme.UnsafeButton"
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        app:icon="@drawable/icon_remove"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/software_version_info_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/rename_button"
        app:layout_constraintTop_toBottomOf="@id/software_version_info_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:text="@string/button_rename"
        app:icon="@drawable/icon_rename"/>

</androidx.constraintlayout.widget.ConstraintLayout>
