<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/room_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="16sp"
        android:text="@string/button_room_settings"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/room_rename_button"
        app:layout_constraintTop_toBottomOf="@id/room_settings_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/button_rename"
        app:icon="@drawable/icon_rename"/>

    <Button
        style="@style/Theme.UnsafeButton"
        android:id="@+id/room_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        app:icon="@drawable/icon_remove"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/room_rename_button"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>