<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/message_pin_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_activation_pin_sent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        android:textAlignment="center"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/message_input_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_activation_pin_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_pin_sent"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activation_pin_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_input_pin"
        android:layout_marginTop="36dp"
        android:hint="@string/hint_activation_pin"
        android:minWidth="240dp"
        android:animateLayoutChanges="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activation_pin_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="18sp"
            android:textAlignment="center"
            android:maxLength="6"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_activate"
        app:layout_constraintTop_toBottomOf="@id/activation_pin_input_layout"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/icon_celebrate"
        app:iconGravity="end"
        android:textSize="18sp"
        app:iconSize="24sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/activate_button"
        app:layout_constraintBottom_toBottomOf="@id/activate_button"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/regenerate_pin_button"
        android:text="@string/message_no_activation_code"/>

    <Button
        android:id="@+id/regenerate_pin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TextButton"
        android:text="@string/button_send_new_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>